--- a/stardict/history
+++ b/stardict/history
@@ -1,20 +1,20 @@
-game
-untara quat kayle
-kayle
-Eclipse
-md
-root
-chmod
-status
-solarized
-powerline
-powerlin
-powerli
-i
-arch linux
-bumblebee
-parameter
-draws
-widget
-qutebrowser dark theme
-Parameters
+spell
+with
+completely
+and
+sex
+calling
+mentioned
+source
+helper
+method
+firefox
+parameters
+width
+filename
+name
+0
+takes
+The
+prints
+you
